2002-01-10  Michael Meeks  <michael@ximian.com>

	* Version 1.109.1

2002-01-10  Michael Meeks  <michael@ximian.com>

	* samples/controls/Makefile.am: fix dist.
	
	* Version 1.109.0

2002-01-09  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(bonobo_ui_sync_toolbar_new): take a ref on the dock.
	(impl_dispose): impl.
	(impl_finalize): kill.
	(class_init): upd.

	* bonobo/bonobo-ui-sync-status.c
	(impl_dispose): impl.
	(class_init): upd.
	(bonobo_ui_sync_status_new): take a ref on status.

	* bonobo/bonobo-ui-sync-menu.c
	(impl_dispose): impl.
	(class_init): add dispose.
	(bonobo_ui_sync_menu_new): hold references on the
	various bits.

	* bonobo/bonobo-ui-engine.c (widget_unref): impl.
	(info_free_fn, prune_node, bonobo_ui_engine_object_set),
	(bonobo_ui_engine_sync, bonobo_ui_engine_stamp_root): hold
	a reference on the info->widget member.
	(custom_widget_unparent): don't do extra refs.

2002-01-09  Michael Meeks  <michael@ximian.com>

	* Makefile.am: remove monikers.

	* monikers/: remove, in libgnome now.

2002-01-08  Paolo Maggi  <maggi@athena.polito.it>

	* bonobo/bonobo-file-selector-util.c: gtkeditable.h #included
	(ok_clicked_cb): fixed a bug with mode == FILESEL_OPEN_MULTI
	(create_gtk_selector): almost rewritten
	
	* tests/test-filesel.c (get_files): set the default file name
	when calling bonobo_file_selector_save

2002-01-08  Darin Adler  <darin@bentspoon.com>

	* bonobo/Makefile.am: Remove unnecessary "cd srcdir" from
	build rule that screwed up distcheck.

2002-01-07  Rodrigo Moya <rodrigo@ximian.com>

	* monikers/bonobo-moniker-config.c: implemented config: moniker, based
	in GConf

	* monikers/bonobo-config-bag.[ch]: PropertyBag implementation for the
	config: moniker, based on bonobo-config's BonoboConfigBag

	* monikers/bonobo-moniker-extra.[ch]: added new moniker

2002-01-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-widget.c (bonobo_widget_construct_control):
	nail daft leak.
